--- a/VaRCalculator-main/VaRcalculator.ipynb
+++ b/VaRCalculator-main/VaRcalculator.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# **VaR Calculator**\n",
     "\n",
-    "#### Author: Prudhvi Reddy, Muppala\n",
+    "#### Author: Trayna Bui\n",
     "#### Financial Engineer\n",
     "#### Date created: 8 Oct 2023\n",
     "#### Last updated on: 8 Oct 2023\n",
