--- a/VaRCalculator-main/VaR Execution.ipynb
+++ b/VaRCalculator-main/VaR Execution.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "# **VaR Calculator - Execution**\n",
     "\n",
-    "#### Author: Prudhvi Reddy, Muppala\n",
+    "#### Author: Trayna Bui\n",
     "#### Financial Engineer\n",
-    "#### Date created: 8 Oct 2023\n",
-    "#### Last updated on: 8 Oct 2023\n",
+    "#### Date created: 8 Oct 2024\n",
+    "#### Last updated on: 8 Oct 2024\n",
     "\n"
    ]
   },
